Cacti CHANGELOG

0.8.7i
-bug#0001963: Bandwidth summation "total in" and "total out" are always 0
-bug#0002040: ICMP ping errors for Windows 7 with PHP 5.3
-bug#0002062: Multiple security vulnerabilities
-bug#0002063: Multiple value poller output incorrectly interpreted as hexadecimal value
-bug#0002064: Removing "~" (tilde) by sanitize_uri() conflicts with Apache UserDir translation
-bug#0002066: Graph without host id "Notice: Undefined variable: host_id"
-bug#0002067: Custom time range filter not working 
-bug#0002068: Missing header include in analyze_database.php
-bug#0002071: MySQL table poller_item is dropped always when "Data Input Method" is changed or added.
-bug#0002079: Using input field of a script in graph title does not work 
-bug#0002080: Database password containing "@" does not connect
-bug#0002083: Adding a new users generates errors in apache logs
-bug#0002084: Incorrect normalization of hrStorageTable values over 2^31
-bug#0002086: Incorrect usage of mysql custom tcp port
-bug#0002087: PHP recache problems due to missing slashes in reindex table
-bug#0002093: Unit exponent value of 0 not imported with graph template
-bug#0002094: CDEF: "another cdef" references not included in template export
-bug#0002106: Command line add device does not accept "None" for host template
-bug: Update host template cli script help to fix incorrect options
-bug: Refresh of Cacti log viewer not working
-bug: Problems saving User Graph Permissions in IE9
-bug: Bandwidth summation fails if NAN values are present
-bug: Special Type Code "host_id" available in Data Queries by Not Data Input Methods
-bug: Do not generate error messages when creating non host based graphs
-bug: Wrong index used for Data Queries using VALUE/REGEXP
-bug: Fix issue with title variable replacement failing when no host is associated with graph
-bug: Cacti generating MySQL 1100 Errors when modifying the tree