@@ -54,7 +54,29 @@ function form_save() {
 
 	while (list($tab_short_name, $tab_fields) = each($settings_graphs)) {
 		while (list($field_name, $field_array) = each($tab_fields)) {
-			if ((isset($field_array["items"])) && (is_array($field_array["items"]))) {
+			if ($field_array["method"] == "checkbox") {
+				if (isset($_POST[$field_name])) {
+					db_execute("REPLACE INTO settings_graphs (user_id,name,value) VALUES (" . $_SESSION["sess_user_id"] . ",'$field_name', 'on')");
+				}else{
+					db_execute("REPLACE INTO settings_graphs (user_id,name,value) VALUES (" . $_SESSION["sess_user_id"] . ",'$field_name', '')");
+				}
+			}elseif ($field_array["method"] == "checkbox_group") {
+				while (list($sub_field_name, $sub_field_array) = each($field_array["items"])) {
+					if (isset($_POST[$sub_field_name])) {
+						db_execute("REPLACE INTO settings_graphs (user_id,name,value) VALUES (" . $_SESSION["sess_user_id"] . ",'$sub_field_name', 'on')");
+					}else{
+						db_execute("REPLACE INTO settings_graphs (user_id,name,value) VALUES (" . $_SESSION["sess_user_id"] . ",'$sub_field_name', '')");
+					}
+				}
+			}elseif ($field_array["method"] == "textbox_password") {
+				if ($_POST[$field_name] != $_POST[$field_name."_confirm"]) {
+					raise_message(4);
+					break;
+				}elseif (isset($_POST[$field_name])) {
+					$value = $cnn_id->qstr(get_request_var_post($field_name));
+					db_execute("REPLACE INTO settings_graphs (user_id,name,value) VALUES (" .  $_SESSION["sess_user_id"] . ",'$field_name', $value)");
+				}
+			}elseif ((isset($field_array["items"])) && (is_array($field_array["items"]))) {
 				while (list($sub_field_name, $sub_field_array) = each($field_array["items"])) {
 					if (isset($_POST[$sub_field_name])) {
 						$value = $cnn_id->qstr(get_request_var_post($sub_field_name));
