@@ -32,6 +32,20 @@ case 'save':
 	while (list($field_name, $field_array) = each($settings{$_POST["tab"]})) {
 		if (($field_array["method"] == "header") || ($field_array["method"] == "spacer" )){
 			/* do nothing */
+		}elseif ($field_array["method"] == "checkbox") {
+			if (isset($_POST[$field_name])) {
+				db_execute("replace into settings (name,value) values ('$field_name', 'on')");
+			}else{
+				db_execute("replace into settings (name,value) values ('$field_name', '')");
+			}
+		}elseif ($field_array["method"] == "checkbox_group") {
+			while (list($sub_field_name, $sub_field_array) = each($field_array["items"])) {
+				if (isset($_POST[$sub_field_name])) {
+					db_execute("replace into settings (name,value) values ('$sub_field_name', 'on')");
+				}else{
+					db_execute("replace into settings (name,value) values ('$sub_field_name', '')");
+				}
+			}
 		}elseif ($field_array["method"] == "textbox_password") {
 			if ($_POST[$field_name] != $_POST[$field_name."_confirm"]) {
 				raise_message(4);
